client/src/styles/RatingsReviews/ReviewEntry.css
.mainBody {
  display: block;
  background-color:#8acabf;
  border-bottom: solid 2px black;
  margin-bottom: 2%;
  padding-left: -10%;
}

.header {
  display: flex;
  justify-content: space-between;
}

.rating {
  padding: 5px 0 0 0;
}

.user {
  padding: 5px 0 0 0;
}

.summary {
  padding: 5px 0;
  font-weight: 600;
}

.body {
  /* display: inline-block; */
  width: 100%;
  padding: 5px 0;
  word-wrap: break-word;
}

.recommend {
  padding: 5px 0;
}

.expand {
  font-weight: 600;
  text-decoration: underline;
  background-color: transparent;
  border-color: transparent;
  margin-bottom: 2%;
}

.response {
  background-color: #7eb4aa;
  padding: 5px;
  margin-bottom: 1%;
}

.responseHeader {
  font-weight: 600;
}

.footer {
  margin-bottom: 2%;
}

.helpful {
  text-decoration: underline;
   margin-left: 1%;
   margin-right: .5%;
}

.helpful:hover {
  color: gold;
  cursor: default;
}

.report {
  text-decoration: underline;
}

.report:hover{
  color: gold;
  cursor: default;
}

